k1 - fixed a bug where the dropdown menu got hidden under the main page contents

--- a/htdocs/css/header.css
+++ b/htdocs/css/header.css
@@ -20,6 +20,10 @@ navbar a{
 	outline: none !important;
 }
 
+.nav-collapse.collapse{
+    z-index: 1000;
+}
+
 .activated{
     background: #e9e8e6;
 }
